2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* NEWS: Initialize for 2.2.x.

2009-12-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Release version 2.2.

	* configure.ac,
	* Makefile.am: Use new automated version numbering from SL
	toolchain.

	* build-aux/package-version: Initialize to 2.2.

	* NEWS,
	* README: New.

2009-12-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Avoid a false positive in the test suite.
	
	* 0_slc/1_createargs/1_shared_empty.c: Ignore results, as the
	behavior of reading a shared after a family that does not write to
	it is undefined.

2009-11-06 Simon Polstra <s.polstra@uva.nl>

	Extend the unit test suite.

	* 0_slc/1_createargs/1_shared_empty.c: Test empty thread.
	* 0_slc/1_createargs/simple_sync.c: Test assignment of a shared
	variable via a temporary variable.

2009-10-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 1_slr/multiargs.c: Exercise multiple uses of `sl_decl'.

2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	* 0_slc/1_createargs/args2.c: Exercise anonymous thread
	argument/parameter names.

2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 0_slc/1_createargs/args1.c: Use whitespace in argument
	definitions to strain whitespace handling.

2009-10-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 0_slc/0_trivial/c99loop.c: New.

2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 2_lib/perf.c,
	* 2_lib/clock.c: Test the new APIs.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Check C99 math more.
	
	* 2_lib/math/avail.c: Test `float_t' and `double_t' as well.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.
	
	* 2_lib/math/avail.c,
	* 2_lib/math/tgamma.c: New.
	
2009-09-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the unit test suite.

	The following bugs were found: when C99 VLA's would be allocated,